assets/css/style.css
/* Universa; */

* {
  box-sizing: border-box;
}

html {
  min-height: 100%;
}

body {
 margin: 0;
 padding: 0;
}

footer {
  line-height: 50px;
  font-size: 11px;
  clear: both;
}

/* Navigation */

footer  a:link,
#site-nav a:link,
#page-nav a:link {
  color: #d3d3d3;
  text-decoration: none;
}

footer  a:visited,
#site-nav a:visited,
#page-nav a:visited {
  color: #d3d3d3;
}

#site-nav  a:hover {
  color: #fff;
}

footer  a:hover,
#page-nav a:hover {
 color: #000;
}

footer  a:active,
#site-nav  a:active,
#page-nav a:active {
  color: #fff;
}

#announcement a:link,
.latest-other-item a:link {
  color: #000;
  text-decoration: none;
}

#announcement a:visited, 
.latest-other-item a:visited {
  color: #000;
}

#announcement a:hover {
  color: #000;
}

.latest-other-item a:hover {
  text-decoration: underline;
  color: red;
}

#announcement a:active,
.latest-other-item a:active {
  color: #000;
}

#site-nav {
 margin: 0;
 paddding: 0;
 height: 21px;
}

#page-nav {
 margin: 0;
 padding: 0;
 height: 42px;
 line-height: 42px;
 background: #fff;
}

[id$="-nav"] {
 font-size: 18px;
}

#page-nav {
 clear: both;

}

#site-nav {
  background: #000;
}

.horiz-menu {
  margin: 0;
  padding: 0;
  list-style: none;
}

.horiz-menu li {
  text-decoration: none;
  float: left;
  margin-left: 10px;
}

.menu-left {
  float: left;
}  

.menu-right {
  float: right;
}

.menu-icon {
  height: 20px;
  width: 20px;
}

#search {
  border-left: 1px solid #d3d3d3;
  padding-left: 5px;
}

/* latest */

#feature {
  margin-top: 10px;
  height: 238px;
  width: 65%;
  background-image: url("../graphics/design-3-796x398.png");
  background-repeat: no-repeat;
  background-size: 100% 238px;
  opacity: 0.5;
  float: left;
}

#latest-right {
  margin-top: 10px;
  margin-left: 5px;
  float: left;
  width: 33%;
}

#latest-right-top {
  height: 114px;
  width: auto;
  opacity: 0.5;
  background-image: url("../graphics/ups_bitcoin-796x417.jpg");
  background-repeat: no-repeat;
  background-size: 100%  114px;
}

#latest-right-bottom {
  margin-top: 10px;
  height: 114px;
  width: auto;
  opacity: 0.5;
  background-image: url("../graphics/GTA-6-Female-Protag-796x417.jpg");
  background-repeat: no-repeat;
  background-size: 100% 114px;
}

#latest-main a:link {
  margin-left: 10px;
  color: #fff;
  font-size: 40px;
  font-weight: bolder;
  text-decoration: none;
}

#latest-right a:link {
  margin-left: 15px;
  font-size: 30px;
}

#latest-main a:visited {
  color: #fff;
}

#latest-main a:hover {
  color: #fff;
}

#latest-main a:active {
  color: #fff;
}

#feature a,
#latest-right a {
  display: block;
}

#latest-right a {
  position: relative;
  top: 10%;
}

#feature a:nth-child(2) {
  position: relative;
  top: 15%;
}

#latest-other {
  clear: left;
}

.latest-other-item img {
  width: 100%;
  height: 130px;
}

.latest-other-item {
  margin: 10px 10px 0 10px;
  width: 20%;
  padding: 0;
  float: left;
}

.other-item-info {
  margin: 5px 0 0 0;
}

.latest-other-item p:nth-child(1) {
  margin: 5px 0 0 0;
  padding: 0;
  color: #000;
}

.latest-other-item p:nth-child(2) {
  margin: 5px 0 0 0;
  padding: 0;
  color: #d3d3d3;
  font-size: 14px;
}

/* Misc */

#announcement {
  margin: 0;
  border: 0;
  background-color: yellow;
  clear: both;
}

#announcement a {
  margin-left: 10px;
}

/* Media queries */

@media only screen and (max-width: 791px) {
   [class*="menu"] li {
     display: none;
   }

   #search {
    display: initial;
   }

   #feature {
     width: 100%;
     background-size: 100% 238px;
   }

   #feature a:nth-child(2) {
     font-size: 30px;
   }

   #latest-right {
     width: 100%;
   }

   .latest-other-item {
     width: 100%;
   }

   .other-item-info {
     display: inline-block;
     width: 80%;
   }

   .other-item-info a {
     font-size: 14px;
   }

   .latest-other-item img {
     width: 70px;
     height: 55px;
   }
}

@media only screen and (max-width: 481px) {
   #announcement a {
     font-size: 14px;
   }

   .other-item-info {
     display: inline-block;
     width: 50%;
   }
}

